<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>message_logger</name>
  <version>0.2.0</version>
  <description>The message logger package</description>
  
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  
  <license>BSD</license>
  
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
