<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (2019-2020) Robotics Systems Lab - ETH Zurich:
Markus Staeuble, Jonas Junger, Johannes Pankert, Philipp Leemann,
Tom Lankhorst, Samuel Bachmann, Gabriel Hottiger, Lennert Nachtigall,
Mario Mauerer, Remo Diethelm

This file is part of the soem_interface_rsl.

The soem_interface_rsl is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

The seom_interface is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with the soem_interface_rsl.  If not, see <https://www.gnu.org/licenses/>.
-->

<package format="3">
    <name>soem_interface_examples</name>
  <version>0.4.0</version>
  <description>Examples on how to use the soem_interface_rsl package.</description>

  <maintainer email="pankertj@ethz.ch">Johannes Pankert</maintainer>
  <license>GPLv3</license>

  <author>Markus Staeuble</author>
  <author email="jungerj@student.ethz.ch">Jonas Junger</author>
  <author email="johannes.pankert@mavt.ethz.ch">Johannes Pankert</author>
  <author>Lennart Nachtigall</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>message_logger</depend>
  <depend>soem_rsl</depend>
  <depend>soem_interface_rsl</depend>
  <depend>candriver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
